welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
	var piste = flase;
	piste=isFacingTrail();
	while (!estSurBiscuit()) {
		while (!piste) {
			gauche();
			piste=isFacingTrail();
		}
		avance();
	}
	prendBiscuit();
}

def isFacingTrail():Boolean = {
	var res=false;
	if (!estFaceMur()) {
		avance();
		res = (getCouleurSol() == Color.green);
		recule();
	}
	return res
}        

